--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <button class="nav-link btn btn-danger" href="#">Logout</button>
+          <button id="navbar-logout-button" class="nav-link btn btn-danger" href="#">Logout</button>
         </li>
       </ul>
     </div>
   </nav>
   <div id="auth"></div>
-  <div id="pinterest"></div>
+  <div id="board" class="hide">I SEE BOARDS</div>
 
 </body>
 </html>
