--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,11 @@
     </div>
   </nav>
   <div id="auth"></div>
-  <div id="board" class="hide"></div>
+  <div id="board" class="hide">
+    <div id="pin" class="hide"></div>
+  </div>
+  <div id="singleView" class="hide"></div>
+  
 
 </body>
 </html>
