edit form pops up on button click, fields appear to be acting appropriately

--- a/src/index.html
+++ b/src/index.html
@@ -73,5 +73,29 @@
   </div>
 </div>
 <!--END ADD PIN MODAL-->
+
+<!-- CREW EDIT MODAL STARTS HERE -->
+<div class="modal fade" id="modalEditPin" tabindex="-1" role="dialog" aria-labelledby="editPinModalTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content modalDisplay">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editPinModalTitle">Edit Pin</h5>
+        <button type="button" class="close buttonSaveEdit" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+
+      <div id="modalBodyEditPin" class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn buttonSaveEdit glowing" data-dismiss="modal">Close</button>
+        <button id="button-save-edit-pin" type="button" class="btn buttonSaveEdit glowing">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END CREW EDIT MODAL-->
 </body>
 </html>
