--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 </div>
 <!--END ADD PIN MODAL-->
 
-<!-- CREW EDIT MODAL STARTS HERE -->
+<!-- PIN EDIT MODAL STARTS HERE -->
 <div class="modal fade" id="modalEditPin" tabindex="-1" role="dialog" aria-labelledby="editPinModalTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content modalDisplay">
@@ -96,6 +96,6 @@
     </div>
   </div>
 </div>
-<!-- END CREW EDIT MODAL-->
+<!-- END Pin EDIT MODAL-->
 </body>
 </html>
